1st release update

--- a/models/simplecontact/columns.yaml
+++ b/models/simplecontact/columns.yaml
@@ -4,7 +4,7 @@ columns:
         type: partial
         path: ~/plugins/zainab/simplecontact/models/simplecontact/_name_col.htm
         searchable: true
-        sortable: false
+        sortable: true
     subject:
         label: 'zainab.simplecontact::lang.simplecontact.subject'
         type: text
