Change alias bug fixed
On changing component alias form was not showing showing labels and
text.
Fixed now by adding __SELF__ to variables

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -6,3 +6,5 @@
 1.0.3:
     - 'Updated table zainab_simplecontact_contact'
     - builder_table_update_zainab_simplecontact_contact.php
+1.0.4:
+    - 'Change Alias bug fixed'
