Language Added (French), fixed punctuation
Language Added (French), fixed punctuation

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -27,3 +27,5 @@
     - 'Notification Email Updated'
 2.0.2:
     - 'Languages Added (Czech, Turkish)'
+2.0.3:
+    - 'Language Added (French), fixed punctuation'    
